<resources>
    <string name="app_name">ProyectoJUPC</string>
    <string name="titulo1">COMPETENCIAS INTERNACIONALES DE FUTBOL</string>
    <string name="titulo2">MENU</string>
    <string name="titulo3">CHAMPIONS LEAGUE</string>
    <string name="titulo4">EUROPA LEAGUE</string>
    <string name="titulo5">COPA LIBERTADORES</string>
    <string name="titulo6">CONCACHAMPIONS</string>
    <string name="titulo7">LIGA ESPAÑOLA</string>
    <string name="titulo8">LIGA INGLESA</string>
    <string name="titulo9">MUNDIAL</string>
    <string name="titulo10">Liga BBVA MX</string>
    <string name="titulo11">INTERNATIONAL CHAMPIONS CUP</string>
    <string name="btnchampions">Champions</string>
    <string name="btneuropa">Europa league</string>
    <string name="btnlibertadores">Libertadores</string>
    <string name="btnmundial">Mundial</string>
    <string name="btnconca">Concachampions</string>
    <string name="btninter">Internationals champions cup</string>
    <string name="btnligaespa">Liga española</string>
    <string name="btnligaing">Liga Inglesa</string>
    <string name="btnligamx">Liga mx</string>
    <string name="btncreador">Creador</string>
    <string name="btnregresa1">MENU</string>
    <string name="btnregresa2">MENU</string>
    <string name="btnregresa3">MENU</string>
    <string name="btnregresa4">MENU</string>
    <string name="btnregresa5">MENU</string>
    <string name="btnregresa6">MENU</string>
    <string name="btnregresa7">MENU</string>
    <string name="btnregresa8">MENU</string>
    <string name="btnregresa9">MENU</string>
    <string name="btnregresa10">MENU</string>
    <string name="texto1">La Liga de Campeones de la UEFA (en inglés y oficialmente: UEFA Champions League), originariamente conocida como Copa de Europa, es el torneo internacional oficial de fútbol más prestigioso a nivel de clubes entre las competiciones organizadas por la Unión de Asociaciones Europeas de Fútbol (UEFA) y uno de los más reconocidos mundialmente</string>
    <string name="texto2">La Liga de Campeones de la Concacaf (en inglés: CONCACAF Champions League), denominada Liga de Campeones CONCACAF Scotiabank por motivos de patrocinio2​ y también conocida como Concachampions, es la máxima competición de clubes de fútbol en la zona de América del Norte, América Central y el Caribe. El ganador del certamen participa en su calidad de campeón como representante de la zona en la Copa Mundial de Clubes de la FIFA.</string>
    <string name="texto3">La Liga Europa de la UEFA (en inglés y oficialmente: UEFA Europa League), originariamente denominada Copa de la UEFA, es una competición continental de clubes organizada por la Unión de Asociaciones Europeas de Fútbol (UEFA), considerada la segunda más prestigiosa de Europa, tras la Liga de Campeones</string>
    <string name="tecto4">La International Champions Cup es una competición mundial de clubes de fútbol, de carácter amistoso, que se celebra cada año en los Estados Unidos, siendo considerado en la actualidad el torneo internacional amistoso más importante de clubes de fútbol. El torneo fue organizado por primera vez en el 2009 con el nombre de World Football Challenge hasta que en el 2013 cambió su nombre al actual.</string>
    <string name="texto5">La Copa Libertadores de América (en portugués: Taça Libertadores da América), llamada oficialmente Copa Conmebol Libertadores,3​ y conocida simplemente como Copa Libertadores, es un torneo anual internacional oficial de fútbol organizado por la Conmebol, creado en 1960 bajo la denominación de Copa de Campeones de América (en portugués: Copa dos Campeões da América) o Copa Campeones de América. En 1965 el torneo adoptó el nombre Libertadores en honor a los líderes de las guerras de independencia hispanoamericanas y brasileña de América del Sur.4​ Es uno de los más prestigiosos torneos en el mundo y la más prestigiosa competición a nivel de clubes de fútbol en Sudamérica y del continente.</string>
    <string name="texto6">La Primera División de España —conocida como LaLiga Santander por motivos de patrocinio,1​ y oficialmente como Campeonato Nacional de Liga de Primera División—,2​ es la máxima categoría masculina del sistema de ligas de España y la principal competición a nivel de clubes del país. La organiza desde 1984 la Liga de Fútbol Profesional (LFP) tras suceder a la Real Federación Española de Fútbol (RFEF). Se disputa desde la temporada 1928-29, viéndose interrumpida únicamente entre 1936 y 1939, debido a la Guerra Civil Española.</string>
    <string name="texto7">La Premier League (en español, Liga Premier), también conocida en Inglaterra como The Premiership, es la máxima categoría del sistema de Ligas de fútbol de Inglaterra. Comenzó a disputarse en la temporada 1992-93 y desde entonces se ha celebrado sin interrupciones. En ella pueden también participar, por motivos históricos, aquellos clubes galeses que lo deseen, siempre que hayan competido ininterrumpidamente en el sistema de fútbol federado inglés desde, al menos, el 30 de junio de 1992. Este es el caso del Swansea City Association Football Club, club radicado en Gales participante de la liga y que ha llegado a representar a Inglaterra en competiciones europeas.</string>
    <string name="texto8">La Primera División de México también conocida simplemente como Liga MX o por motivos de patrocinio Liga BBVA MX,1​2​3​ es la liga de fútbol profesional más importante de México, es el primer nivel en el sistema de ligas de dicho país. Se juegan dos torneos cortos por ciclo anual futbolístico (cada uno con su campeón) denominados Apertura y Clausura (en ese orden). El campeonato se define por medio de una fase final posterior a cada fase regular, conocida como liguilla; clasifican a ella los ocho primeros lugares de la tabla general.</string>
    <string name="texto9">La Copa Mundial de la FIFA, también conocida como Copa Mundial de Fútbol, Copa del Mundo o simplemente Mundial, cuyo nombre original fue Campeonato Mundial de Fútbol, es el principal torneo internacional oficial de fútbol masculino a nivel de selecciones nacionales en el mundo. Además existen otras competiciones que también son copas mundiales de fútbol, entre las que destacan la Copa Mundial Femenina de Fútbol, con sus respectivas categorías con límite de edad, la Copa Mundial de Fútbol Sub-20 y la Copa Mundial de Fútbol Sub-17, todas organizadas por la FIFA.</string>
    <string name="texto10">JONATHAN URIEL PAZ CARDOZO</string>
</resources>
